architecture/shared-components/access-control/keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
  annotations:
    domain.type: support
    component.shared: 'true'
    component.name: keycloak
  namespace: shared-components
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.4
          args:
            - start-dev
          ports:
            - containerPort: 8080
