architecture/shared-components/access-control/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: shared-components
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
